--- a/reactecom/public/index.html
+++ b/reactecom/public/index.html
@@ -25,6 +25,11 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>React App</title>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/js/all.min.js" crossorigin="anonymous"></script>
+    <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+    <script src="https://www.paypal.com/sdk/js?client-id=AaQTFVT_MWYUBcyefAEockq7p6yHyuiC6zVeSoipfvL-huJl7j8xRTPcduMVaXQA9lpB89PMgBfeIedd"></script>
+
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
